# SimpleRayTracer

./: CMakeLists.txt  README.md  run  实验报告.md
apps/: CMakeLists.txt  main.cpp
include/: config.h.in  renderError.hpp  renderer.hpp
platform/: CMakeLists.txt
platform/cuda/: CMakeLists.txt
platform/cuda/include/: BSDFs.hpp  Ray.hpp  cudaOperation.hpp  detail.hpp  details.hpp  objects.hpp  tasks.hpp
platform/cuda/include/maths/: float.hpp  operation.hpp  random.hpp
platform/cuda/src/: BSDFs.cu  CMakeLists.txt  cudaRenderer.cu  details.cu  objects.cu  renderTask.cu  tasks.cu
platform/cuda/src/maths/: random.cu
platform/cuda_abondoned/include/: Ray.hpp  cudaOperation.hpp  cudaRenderer.hpp  details.hpp  tasks.hpp
platform/cuda_abondoned/src/: cudaRenderer.cu  details.cu  tasks.cu
src/: CMakeLists.txt
src/include/: renderInfo.hpp  sobol.hpp
src/src/: CMakeLists.txt  renderer.cpp  sobol.cpp
